# NarakaMapTool

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
resources/: app.rc  resources_naraka.json
scripts/: make_icon.py
src/: config_manager.cpp  config_manager.h  control_panel.cpp  control_panel.h  logger.h  main.cpp  map_status_detector.cpp  map_status_detector.h  overlay_window.cpp  overlay_window.h
